--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
     "doc": "docs"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "nodemon src/app.js -e js,html,njk,env",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
+    "test": "jest"
   },
   "repository": {
     "type": "git",
@@ -25,17 +28,22 @@
     "eslint-config-prettier": "^7.1.0",
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-jest": "^24.1.3",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
     "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.0.0",
     "jest": "^26.6.3",
     "nodemon": "^2.0.7",
     "prettier": "^2.2.1"
   },
   "dependencies": {
+    "connect-session-sequelize": "^7.1.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "express-session": "^1.17.1",
     "multer": "^1.4.2",
     "nunjucks": "^3.2.2",
+    "pg": "^8.5.1",
     "rsdi": "^1.0.10",
     "sequelize": "^6.5.0",
     "sqlite3": "^5.0.1"
