Crud of admins with tokens validation

--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
 DATABASE_URL=postgresql://postgres:ecommerce@localhost:5432/postgres
 SESSION_SECRET=secreto
-ADMIN_USERNAME=admin
-ADMIN_PASSWORD=password
+TOKEN_SECRET=secreto
 PRODUCTS_IMAGES_DIR=./public/uploads/images/products
 BRANDS_IMAGES_DIR=./public/uploads/images/brands
+NODE_ENV=development
