Add a first admin form

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,5 +1,5 @@
 {
-  "extends": ["airbnb", "prettier", "jquery"],
+  "extends": ["airbnb", "prettier"],
   "plugins": ["prettier", "jest"],
   "env": {
     "jest/globals": true
